changing https git repository url, refs 38

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "repositories": [
         {
           "type": "vcs",
-          "url": "git@bitbucket.org:purebilling/puremachinesdk.git"
+          "url": "https://bitbucket.org/PureBilling/puremachinesdk.git"
         }
     ]
 }
