--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "2.3.*",
-        "doctrine/annotations": "dev-master",
+        "doctrine/annotations": "1.*",
         "puremachine/sdk": "dev-master"
     },
     "repositories": [
