--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "symfony/event-dispatcher": ">=2.3",
         "doctrine/annotations": "~1.0",
         "doctrine/cache": "~1.0",
-        "puremachine/sdk": "2.0.*"
+        "puremachine/sdk": "dev-master"
     }
 }
 
